# EtoE

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  dvc.yaml  locustfile.py  main.py  mlflow.db  params.yaml  prometheus.yml  pyproject.toml  schema.yaml  template.py
config/: config.yaml
grafana/provisioning/dashboards/: dashboard.yml  wine_quality_dashboard.json
research/: trials.ipynb
src/mlProject/: __init__.py
src/mlProject/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/mlProject/config/: configuration.py
src/mlProject/entity/: __init__.py
src/mlProject/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/mlProject/utils/: common.py
templates/: index.html  results.html
wandb/: latest-run
wandb/run-20260102_013916-xzrbi3k9/: run-xzrbi3k9.wandb
wandb/run-20260102_013954-id4ixit8/: run-id4ixit8.wandb
wandb/run-20260102_014157-e64a0tgm/: run-e64a0tgm.wandb
wandb/run-20260102_014624-cpzyn7x2/: run-cpzyn7x2.wandb
wandb/run-20260102_014624-cpzyn7x2/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260102_014624-cpzyn7x2/files/media/table/: feature_importance_table_1_9dd52cf8716ea3257a14.table.json
