[project]
name = "mlProject"
version = "0.0.1"
description = "A flexible end-to-end Machine Learning project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlProject"]
